--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "eslint-config-prettier": "^8.8.0",
@@ -27,6 +28,7 @@
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-select": "^5.7.3",
